--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,6 @@ body{
 }
 
 #skaters div {
-    height:195px;
     width:330px;
     background:black;
     color:white;
@@ -143,6 +142,7 @@ body{
     text-align: cemter;
     position: relative;
     border: white solid 3px;
+    height: 415px;
     
   }
   
@@ -152,6 +152,7 @@ body{
       background-position: 100% 0%;
       text-align: center;
       font-size: 50px;
+      height: 200px;
 
       
   }
@@ -161,6 +162,7 @@ body{
       margin-left: 5px;
       text-align: center;
       font-size: 50px;
+      height: 200px;
     } 
   #skaters div:nth-child(3) {
       background-image: url("assets/sk8er-1.png");
@@ -169,6 +171,7 @@ body{
       background-size: auto;
       text-align: center;
       font-size: 50px;
+      height: 195px;
       
   }
   #skaters div:nth-child(4) {
@@ -182,35 +185,52 @@ body{
 }
 
 .boards{
-    margin-top: 90px;
     background: white;
     width: 100%;
-    
-    
+    display: flex;
+    justify-content: space-around;
+     
 }
 
-#formsheet{
+#bottomcolumn{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
     background: white;
-    margin-top: 40px;
     width: 1000px;
-    padding-bottom: 100px;
+    padding: 10px 15px 10px 15px;
+
 }
 
-.contact{
-    background: white;
-    font-size: 8px;
-    float: left;
-    clear: left;
-    text-align: center;
-    width: 300px;
-    height: 150px;
+.Contact{
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
 
+    
 }
 
 .forms{
-    background: white;
-    display: block;
-    width: 700px;
-    height: 150px;
-    float: right;
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    width: 500px;
+}
+
+.Contact p{
+    padding: 10px;
+    width:300px;
+}
+
+.forms button {
+    margin-top: 10px;
+    background: rgb(170, 36, 41);
+    color: white;
+    width: 70px;
+    margin-left: 430px;
+}
+
+.forms input{
+    margin-bottom: 10px;
 }
